--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       // Слой для даты 1
       map.addSource('layer1', {
         type: 'vector',
-        url: 'https://api.maptiler.com/tiles/test_dnepr4/?key=8zLPQKtsZEgAvaTqIbHF'
+        url: 'https://api.maptiler.com/tiles/test_dnepr4/{z}/{x}/{y}.pbf?key=8zLPQKtsZEgAvaTqIbHF'
       });
       map.addLayer({
         id: 'layer1',
