--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
     </select>
   </div>
   <div id="map"></div>
+  <div id="legend">
+    <h4>Легенда</h4>
+    <div><span style="background-color: #FF0000;"></span> Дата 1</div>
+    <div><span style="background-color: #00FF00;"></span> Дата 2</div>
+  </div>
   <script>
     // Инициализация карты
     const map = new maplibregl.Map({
