--- a/index.html
+++ b/index.html
@@ -50,11 +50,12 @@
       });
       map.addLayer({
         id: 'layer1',
-        type: 'circle',
+        type: 'line',
         source: 'layer1',
         paint: {
-          'circle-radius': 5,
-          'circle-color': '#FF0000'
+          'line-color': '#0000FF',
+          'line-width': 2,
+          'line-opacity': 0.8
         }
       });
 
