--- a/index.html
+++ b/index.html
@@ -15,6 +15,27 @@
       padding: 10px;
       z-index: 1;
     }
+    #legend {
+      position: absolute;
+      bottom: 20px; /* Расположение легенды */
+      left: 20px;
+      background: white;
+      padding: 10px;
+      border-radius: 5px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+      z-index: 1; /* Убедитесь, что легенда поверх карты */
+    }    
+    #legend h4 {
+      margin: 0 0 10px 0;
+      font-size: 16px;
+    }    
+    .legend-color {
+      display: inline-block;
+      width: 12px;
+      height: 12px;
+      margin-right: 5px;
+      border: 1px solid #000; /* Граница для цветных квадратов */
+    }
   </style>
 </head>
 <body>
@@ -28,8 +49,8 @@
   </div>
   <div id="legend">
     <h4>Легенда</h4>
-    <div><span style="background-color: #FF0000;"></span> Дата 1</div>
-    <div><span style="background-color: #00FF00;"></span> Дата 2</div>
+    <div><span class="legend-color" style="background-color: #FF0000;"></span> Дата 1</div>
+    <div><span class="legend-color" style="background-color: #00FF00;"></span> Дата 2</div>
   </div>
   <div id="map"></div>
   <script>
